--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,6 +6,18 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
+  format-and-lint:
+    runs-on: ubuntu-latest
+    name: Format, lint and type check
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: .nvmrc
+      - run: yarn install --frozen-lockfile
+      - run: yarn format:check
+      - run: yarn lint
+      - run: yarn typecheck
   simulate-release:
     name: Simulate release
     runs-on: ubuntu-latest
@@ -13,30 +25,23 @@ jobs:
       contents: read
       pull-requests: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20.13
+          node-version-file: .nvmrc
       - name: Install dependencies
         run: yarn
       - name: Create artifacts
         run: yarn compile
       - name: Compile scripts
         run: yarn scripts:compile
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-3
-      - name: Download latest release artifacts
+      - name: Pull latest release
         env:
-          BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-        run: |
-          mkdir -p releases/latest
-          aws s3 cp s3://$BUCKET_NAME/releases/latest/build-info.json releases/latest/build-info.json || echo "Error: Failed to download latest release from S3."
+          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: eu-west-3
+        run: yarn cli pull -r latest
       - name: Create diff between artifacts and latest release
         uses: actions/github-script@v7
         id: artifacts-diff
