--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "compile": "yarn format:contracts && hardhat compile --force --no-typechain",
     "release": "./.github/release.sh",
     "scripts:compile": "tsup scripts/cli/diff-with-latest.ts",
-    "cli": "ts-node --files scripts/cli/index.ts",
     "hardhat": "hardhat",
     "hardhat:node": "hardhat node",
     "release:build-exposed-abis": "ts-node --files scripts/build-exposed-abis.ts",
     "release:build-deployments-summary": "ts-node --files scripts/build-deployments-summary.ts",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "yarn cli generate-typings"
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.616.0",
@@ -30,7 +28,7 @@
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.8",
+    "@nomicfoundation/hardhat-verify": "^2.0.9",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@smithy/types": "^3.3.0",
     "@typechain/ethers-v6": "^0.4.0",
@@ -57,5 +55,8 @@
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.17.0",
     "zod": "^3.23.8"
+  },
+  "dependencies": {
+    "hardhat-soko": "^0.4.0"
   }
 }
