--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -26,4 +26,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: eu-west-3
-        run: yarn hardhat soko push ${{ github.ref_name }}
+        run: yarn hardhat soko push --release ${{ github.ref_name }}
