--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           node-version-file: .nvmrc
       - run: yarn install --frozen-lockfile
+      - name: Generate default typings
+        run: yarn hardhat soko typingsg
       - run: yarn format:check
       - run: yarn lint
       - run: yarn typecheck
