--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Create artifacts
         run: yarn compile
       - name: Push release to S3
+        run: yarn hardhat soko push --release ${{ github.ref_name }}
         env:
-          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: eu-west-3
-        run: yarn hardhat soko push --release ${{ github.ref_name }}
