--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -46,8 +46,8 @@ jobs:
       - name: Create diff between artifacts and latest release
         id: artifacts-diff
         run: |
-          diff_result=$(yarn hardhat soko diff --release latest)
-          echo "DIFF=$diff_result" >> "$GITHUB_OUTPUT"
+          result=$(yarn hardhat soko diff --release latest)
+          echo "DIFF=$result" >> "$GITHUB_OUTPUT"
       - name: Test output
         run: echo ${{ steps.artifacts-diff.outputs.DIFF }}
         # with:
