--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "hardhat-deploy": "^0.11.42",
     "hardhat-deploy-ethers": "^0.4.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-soko": "^0.5.0",
     "prettier": "^3.0.3",
     "prettier-plugin-solidity": "^1.1.3",
     "solidity-coverage": "^0.8.0",
@@ -55,8 +56,5 @@
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.17.0",
     "zod": "^3.23.8"
-  },
-  "dependencies": {
-    "hardhat-soko": "^0.4.0"
   }
 }
