Migrate to Hardhat Soko (#60)
* start migration to package

* change args \

* generate default typings

* fix typings task name

* fix env in ci

* delete old artifacts file

* move .env to global for the workflow

* test output

* test output

* test output

* test with updated version

* update hardhat-soko

* try with new version

* remove local cli

* update readme

* update documentation

* update implementation of contract

* add changeset

--- a/package.json
+++ b/package.json
@@ -13,14 +13,11 @@
     "lint": "eslint 'scripts'",
     "compile": "yarn format:contracts && hardhat compile --force --no-typechain",
     "release": "./.github/release.sh",
-    "scripts:compile": "tsup scripts/cli/diff-with-latest.ts",
-    "cli": "ts-node --files scripts/cli/index.ts",
     "hardhat": "hardhat",
     "hardhat:node": "hardhat node",
     "release:build-exposed-abis": "ts-node --files scripts/build-exposed-abis.ts",
     "release:build-deployments-summary": "ts-node --files scripts/build-deployments-summary.ts",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "yarn cli generate-typings"
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.616.0",
@@ -30,7 +27,7 @@
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.8",
+    "@nomicfoundation/hardhat-verify": "^2.0.9",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@smithy/types": "^3.3.0",
     "@typechain/ethers-v6": "^0.4.0",
@@ -40,7 +37,6 @@
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=16.0.0",
     "chai": "^4.2.0",
-    "commander": "^12.1.0",
     "dotenv": "^16.3.1",
     "eslint": "^9.7.0",
     "ethers": "^6.8.0",
@@ -48,6 +44,7 @@
     "hardhat-deploy": "^0.11.42",
     "hardhat-deploy-ethers": "^0.4.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-soko": "^0.5.2",
     "prettier": "^3.0.3",
     "prettier-plugin-solidity": "^1.1.3",
     "solidity-coverage": "^0.8.0",
