--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,6 +5,12 @@ on:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
+env:
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
 jobs:
   format-and-lint:
     runs-on: ubuntu-latest
@@ -15,6 +21,8 @@ jobs:
         with:
           node-version-file: .nvmrc
       - run: yarn install --frozen-lockfile
+      - name: Generate default typings
+        run: yarn hardhat soko typings
       - run: yarn format:check
       - run: yarn lint
       - run: yarn typecheck
@@ -33,22 +41,15 @@ jobs:
         run: yarn
       - name: Create artifacts
         run: yarn compile
-      - name: Compile scripts
-        run: yarn scripts:compile
       - name: Pull latest release
-        env:
-          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: eu-west-3
-        run: yarn cli pull -r latest
+        run: yarn hardhat soko pull --release latest
       - name: Create diff between artifacts and latest release
-        uses: actions/github-script@v7
         id: artifacts-diff
+        uses: actions/github-script@v7
         with:
           script: |
-            const { generateDiffWithLatest } = await import('${{ github.workspace }}/dist/diff-with-latest.js');
-            const diff = await generateDiffWithLatest();
+            const { generateDiffWithTargetRelease } = require("hardhat-soko/scripts");
+            const diff = await generateDiffWithTargetRelease(".soko", "latest");
             return diff;
       - name: Create or update comment on PR
         uses: actions/github-script@v7
