--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
         with:
           node-version-file: .nvmrc
       - run: yarn install --frozen-lockfile
+      - name: Generate default typings
+        run: yarn hardhat soko typings
       - run: yarn format:check
       - run: yarn lint
       - run: yarn typecheck
