--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "release": "./.github/release.sh",
     "hardhat": "hardhat",
     "hardhat:node": "hardhat node",
-    "release:build-exposed-abis": "ts-node --files scripts/build-exposed-abis.ts",
-    "release:build-deployments-summary": "ts-node --files scripts/build-deployments-summary.ts",
+    "release:build-exposed-abis": "ts-node scripts/build-exposed-abis.ts",
+    "release:build-deployments-summary": "ts-node scripts/build-deployments-summary.ts",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
@@ -44,7 +44,7 @@
     "hardhat-deploy": "^0.11.42",
     "hardhat-deploy-ethers": "^0.4.1",
     "hardhat-gas-reporter": "^1.0.8",
-    "hardhat-soko": "^0.5.2",
+    "hardhat-soko": "^0.5.3",
     "prettier": "^3.0.3",
     "prettier-plugin-solidity": "^1.1.3",
     "solidity-coverage": "^0.8.0",
