--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "hardhat-deploy": "^0.11.42",
     "hardhat-deploy-ethers": "^0.4.1",
     "hardhat-gas-reporter": "^1.0.8",
-    "hardhat-soko": "^0.5.3",
+    "hardhat-soko": "0.6.0",
     "prettier": "^3.0.3",
     "prettier-plugin-solidity": "^1.1.3",
     "solidity-coverage": "^0.8.0",
