--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -42,14 +42,19 @@ jobs:
       - name: Create artifacts
         run: yarn compile
       - name: Pull latest release
-        run: yarn hardhat soko pull --release latest
+        run: yarn hardhat soko pull --artifact doubtful-counter:latest
       - name: Create diff between artifacts and latest release
         id: artifacts-diff
         uses: actions/github-script@v7
         with:
           script: |
-            const { generateDiffWithTargetRelease } = require("hardhat-soko/scripts");
-            const diff = await generateDiffWithTargetRelease(".soko", "latest");
+            const { generateDiffWithTargetRelease, LocalStorageProvider } = require("hardhat-soko/scripts");
+            const diff = await generateDiffWithTargetRelease(
+              "./artifacts",
+              { project: "doubtful-counter", tagOrId: "latest" },
+               undefined,
+               new LocalStorageProvider(".soko")
+            );
             return diff;
       - name: Create or update comment on PR
         uses: actions/github-script@v7
